=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.21_01-dev

$r->current_callback now works properly when PerlHandler invokes
subrequests, thanks to James Smith for the spot

if an Apache::Table is NULL return undef (e.g. $r->notes during ChildInit)

ActivePerl compile patches [Jochen Wiedmann <joe@ispsoft.de>]

document that Apache 1.2.x is no longer supported

Apache::src now supported with USE_APXS=1

'make test' AllowOverride None for Directory / 
[Steve Lembark <Steve.Lembark@wfg.com>]

disable experimental perlrunxs until future notice

add sanity check for libgdbm

change PL_siggv usage to gv_fetchpv("SIG", ...) for Perl 5.6-tobe
[Andreas J. Koenig <andreas.koenig@anima.de>]

document $r->get_handlers, $r->set_handlers, $r->push_handlers
[Eric Cholet <cholet@logilune.com>]

document PerlSetVar [Eric Cholet <cholet@logilune.com>]

document the fact that $r->dir_config handles keys in a
case insensitive manner [Ken Williams <ken@forum.swarthmore.edu>]

avoid logging "rwrite returned -1" multiple times in the
same request [Eric Cholet <cholet@logilune.com>]

bugfix in write_client() when running under APACHE_SSL
[Michael Douglass <mikedoug@staff.texas.net>]

document the fact that $r->connection->user can be used to set
the authenticated user name [Joshua Gerth <jgerth@ptdcs2.ra.intel.com>]

document the fact that $r->uri sets/gets the URI minus the query string,
not the complete URI [Andrei A. Voropaev <andrei@securities.com>]

fixed the failure of t/modules/file test in 'make test' suit by untainting
the $ENV{PATH} in ./t/net/perl/file.pl [Stas Bekman <sbekman@iname.com>]

added the Apache::GTopLimit to MANIFEST and thus to distribution [Stas
Bekman <sbekman@iname.com>]

Apache::RegistryLoader::handler was rewritten to allow a better
diagnostics of scripts preloading problems. [Stas Bekman 
<sbekman@iname.com>]
