@@ -15,8 +15,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - should $r->content unset $r->headers_in('content-length') ?
 
-- perl_reload_inc problem [Nathan Sidwell <nathan@acm.org>]
-
 - update url to Randy Kobes' win32 binary
 
 - fix t/httpd symlink logic ["Young, Geoffrey S." <younggs@acwilm.com>]
